# midas-journal-845

source/: CMakeLists.txt  FCMClassification2D.cxx  IJMacros.txt  KFCMSClassification2D.cxx  MSKFCMClassification2D.cxx  MSKFCMClassification3D.cxx  MSKFCMOpening2D.cxx  itkFCMClassifierInitializationImageFilter.h  itkFCMClassifierInitializationImageFilter.txx  itkFuzzyClassifierImageFilter.h  itkFuzzyClassifierImageFilter.txx  itkFuzzyClassifierInitializationImageFilter.h  itkFuzzyClassifierInitializationImageFilter.txx  itkGRBFKernelInducedDistanceMetric.h  itkGRBFKernelInducedDistanceMetric.txx  itkKFCMSClassifierInitializationImageFilter.h  itkKFCMSClassifierInitializationImageFilter.txx  itkKernelInducedDistanceMetric.h  itkKernelInducedDistanceMetric.txx  itkMSKFCMClassifierInitializationImageFilter.h  itkMSKFCMClassifierInitializationImageFilter.txx  itkRBFKernelInducedDistanceMetric.h  itkRBFKernelInducedDistanceMetric.txx  itkVectorImageDuplicator.h  itkVectorImageDuplicator.txx
source/Images/input/: inputIm1.dcm  inputIm2.dcm  inputIm3.dcm  inputIm4.dcm  inputIm6.dcm
source/Images/input/serie/: 000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm
source/Images/output/FCM/: outIm1.dcm  outIm2.dcm  outIm3.dcm  outIm4.dcm  outIm5.dcm  outIm6.dcm
source/Images/output/KFCMS/: outIm1.dcm  outIm2.dcm  outIm3.dcm  outIm4.dcm  outIm5.dcm  outIm6.dcm
source/Images/output/MSKFCM/: outIm1.dcm  outIm10.dcm  outIm2.dcm  outIm3.dcm  outIm4.dcm  outIm5.dcm  outIm6.dcm
source/Images/output/MSKFCMOpening/: outIm1.dcm
source/Images/output/Serie/: 000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000010.dcm
